[package]
name = "yuzuha"
edition = "2024"
version.workspace = true

[lib]
name = "yuzuha"
crate-type = ["cdylib"]

[dependencies]
ilhook.workspace = true
num_enum.workspace = true
windows = { workspace = true, features = [
	"Win32_Foundation",
	"Win32_System_SystemServices",
	"Win32_System_LibraryLoader",
	"Win32_System_Console",
	"Win32_System_Threading",
	"Win32_System_Memory",
] }

yuzuha-codegen = { path = "yuzuha-codegen" }
